--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>My research is at the intersection of statistics and medicine. More specific topics are listed below.</p>
+    <p>I am intersted in the intersection of statistics and medicine with more specific topics listed below.</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
@@ -69,7 +69,7 @@
     </p>
     -->
 
-    <p><a href="https://samweisenthal.wordpress.com">Blog for random research-related thoughts</a>.</p>
+    <p><a href="https://samweisenthal.wordpress.com">Blog</a>.</p>
    
    
           
