--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -69,7 +69,7 @@
     </p>
     -->
 
-    <p><a href="https://samweisenthal.wordpress.com">Blog</a>.</p>
+    <p>Check out my <a href="https://samweisenthal.wordpress.com">Blog</a>!</p>
    
    
           
