--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Welcome! I'm Sam. I do research at the intersection of statistics and medicine, with more specific topics listed below.</p>
+    <p>I'm Sam! I work at the intersection of statistics and medicine, with more specific interests listed below.</p>
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
@@ -58,6 +58,9 @@
           <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
+
+     <p><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></p>
+
     
     
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
