--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,25 +59,13 @@
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
 
-     <p><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></p>
-
-    
+     
     
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
-    <!--
-    <p>Online discussions include
-      <ul>
-   <li><a href="https://stats.stackexchange.com/questions/295383/why-is-data-augmentation-classified-as-a-type-of-regularization/295394#295394">On data augmentation as regularization</a></li>     
-      </ul>
-    </p>
-    -->
-
-    <p>Check out my <a href="https://samweisenthal.wordpress.com">Blog</a>!</p>
-   
-   
-          
-
-    
+             <p>Blog posts</p>
+    <ul>
+          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></li>
+    </ul>    
     
   </article>
 </div><!-- /#main -->
