--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,14 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>I'm Sam! I work at the intersection of statistics and medicine, with more specific interests listed below.</p>
+    <p>I'm Sam! I work at the intersection of statistics and medicine.  I have listed some of my work / interests below.</p>
+
+  <p>Blog posts</p>
+    <ul>
+      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></li>  
+    </ul>    
+    
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
@@ -60,12 +67,6 @@
           <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
-    
-    <p>Blog posts</p>
-    <ul>
-      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></li>  
-    </ul>    
     
   </article>
 </div><!-- /#main -->
