--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,12 +25,6 @@
         </center>
     -->
     <p>I'm Sam! I work at the intersection of statistics and medicine.  I have listed some of my projects / interests below.</p>
-
-  <p>Blog posts</p>
-    <ul>
-      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">My journey from data science to statistics in an academic medical center.</a></li>  
-    </ul>    
     
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
@@ -48,6 +42,12 @@
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
  <li>On calibration (<a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">forum answer</a>)</li>
     </ul>
+
+      <p>Blog posts</p>
+    <ul>
+      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center.</a></li>  
+    </ul>    
 
     <p>Radiation dose monitoring / quality control / outlier detection</p>
 <ul>
