--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,7 +66,10 @@
           <p>Blog posts</p>
     <ul>
       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center.</a></li>  
+          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
+     <li><a href="https://samweisenthal.com/2024/08/17/99/">Shelter from the storm: the protective role of decision analysis</a></li>  
+
+      
     </ul>    
 
     
