--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>I'm Sam! I work at the intersection of statistics and medicine.  I have listed some of my projects / interests below.</p>
+    <p>I'm Sam! I study the intersection of statistics and medicine.  I have listed some of my projects / interests below.</p>
     
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
