--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -51,9 +51,10 @@
 <p>Diagnosis / Covid-19 / large language models </p>
 <ul>
   <li>ChatGPT and post-test probability (<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
-         <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>, <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
+      <!---   <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>, <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
+      --->
+   <li>On the post-test probability of covid-19 (<a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
       
-  
 </ul>
     
     <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
