--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,16 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
+    <p><a href="https://samweisenthal.com/2024/11/10/welcome/">An open invitation to anyone in the Middle East</a></p>
     <p>I'm Sam! I study the intersection of statistics and medicine.  I have listed some of my projects / interests below.</p>
+
+          <p>Blog posts</p>
+    <ul>
+       <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
+      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+       <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  
+      <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
+    </ul>    
     
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
@@ -66,13 +75,7 @@
     </ul>
 
 
-          <p>Blog posts</p>
-    <ul>
-       <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
-      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  
-      <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
-    </ul>    
+
 
     
   </article>
