--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@
         </center>
     -->
     <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to anyone in the Middle East</a></p>
-    <p>I'm Sam! I study the intersection of statistics and medicine.  I have listed some of my projects / interests below.</p>
+    <p>Welcome to my page. I'm Sam! I study the intersection of statistics and medicine, and my interests are listed below.</p>
 
           <p>Blog posts</p>
     <ul>
