--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,4 @@
-<!doctype html>
+s<!doctype html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to anyone in the Middle East</a></p>
+    <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></p>
     <p>Welcome to my page. I'm Sam! I study the intersection of statistics and medicine, and my interests are listed below.</p>
 
           <p>Blog posts</p>
