--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,4 +1,4 @@
-s<!doctype html>
+<!doctype html>
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
@@ -24,8 +24,7 @@ s<!doctype html>
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-    <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></p>
-    <p>Welcome to my page. I'm Sam! I study the intersection of statistics and medicine, and my interests are listed below.</p>
+      <p>Welcome to my page. I'm Sam! I study the intersection of statistics and medicine, and my interests are listed below.</p>
 
           <p>Blog posts</p>
     <ul>
@@ -76,7 +75,8 @@ s<!doctype html>
 
 
 
-
+ <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></p>
+ 
     
   </article>
 </div><!-- /#main -->
