--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
     <ul>
        <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  
+       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
       <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
     </ul>    
     
