--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,6 +28,8 @@
 
           <p>Blog posts</p>
     <ul>
+
+ <li>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></li>
        <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
        <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
@@ -75,8 +77,7 @@
 
 
 
- <p>Personal note: <a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></p>
- 
+
     
   </article>
 </div><!-- /#main -->
