--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,7 +24,7 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-      <p>Welcome to my page, I'm Sam! I study statistics and medicine.  Some work is described below.</p>
+      <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below.</p>
 
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
