--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,6 +30,10 @@
       <ul>
   <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
     <li>Inference for relative sparsity (<a href="https://arxiv.org/pdf/2306.14297.pdf">preprint</a>)</li>
+       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
+        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li>  
+ 
       </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
@@ -65,14 +69,11 @@
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
     
-   <p>Blog posts</p>
+   <p>Statistics and data science</p>
     <ul>
 
-       <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
-      <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
-        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li>  
- 
+         <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
+   
       <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
     </ul>    
     
