--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,36 +28,37 @@
 
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
-  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
-    <li>Inference for relative sparsity (<a href="https://arxiv.org/pdf/2306.14297.pdf">preprint</a>)</li>
-       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
-        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li>  
- 
+  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems (paper)</a></li>
+    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (preprint)</a></li>
+       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability (blog)</a></li>
+       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis (blog)</a></li>  
+        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world (blog)</a></li>  
+  <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
+
       </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
       <ul>
-  <li>Optimality-based reward learning with applications to toxicology (<a href="https://arxiv.org/pdf/2404.04406.pdf">preprint</a>)</li>
+  <li><a href="https://arxiv.org/pdf/2404.04406.pdf">Optimality-based reward learning with applications to toxicology (preprint)</a></li>
       </ul>
     
     <p>Prediction</p>
     <ul>
-       <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data</a></li>
- <li>On calibration (<a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">forum answer</a>)</li>
+       <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data (paper)</a></li>
+ <li>a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum)</a></li>
     </ul>
 
     <p>Radiation dose monitoring / quality control / outlier detection</p>
 <ul>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine</a></li>
+  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine (paper)</a></li>
 </ul>
 
 <p>Diagnosis / Covid-19 / large language models </p>
 <ul>
-  <li>ChatGPT and post-test probability (<a href="https://arxiv.org/pdf/2311.12188.pdf">preprint</a>)</li>
+  <li> <a href="https://arxiv.org/pdf/2311.12188.pdf">ChatGPT and post-test probability (preprint)</a></li>
       <!---   <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>, <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
       --->
-   <li>On the post-test probability of covid-19 (<a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
+   <li><a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">On the post-test probability of covid-19 (app)</a></li>
       
 </ul>
     
@@ -65,19 +66,17 @@
 
             <p>Teaching</p>
     <ul>
-          <li>On prediction (<a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">forum question</a>)</li>
+          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On prediction (forum)</a></li>
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
     
-   <p>Statistics and data science</p>
+   <p>On statistics and data science</p>
     <ul>
 
          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
    
-      <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
-    </ul>    
+         </ul>    
     
-
 <p>Personal
 </p>
 
