--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -45,7 +45,7 @@
     <p>Prediction</p>
     <ul>
        <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data (paper)</a></li>
- <li>a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum)</a></li>
+ <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum)</a></li>
     </ul>
 
     <p>Radiation dose monitoring / quality control / outlier detection</p>
