--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -73,8 +73,8 @@
    <p>On statistics and data science</p>
     <ul>
 
-         <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center</a></li>  
-   
+         <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center (blog)</a></li>  
+   <!--<li><a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">Statistics and machine learning ()</a></li>-->
          </ul>    
     
 <p>Personal
