--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,13 +28,18 @@
 
     <p>Medical decision making / decision theory / reinforcement learning</p> 
       <ul>
-  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems (paper)</a></li>
-    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity (preprint)</a></li>
-       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability (blog)</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis (blog)</a></li>  
-        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world (blog)</a></li>  
+        <li>Manuscripts</li>
+        <ul>
+  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
+    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
+        </ul>
+        <li>Blog posts</li>
+        <ul>
+       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
+        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li>  
   <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
-
+</ul>
       </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
