--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,9 +35,11 @@
         </ul>
         <li>Blog posts</li>
         <ul>
-       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Formalizing medical decisions using probability</a></li>
+       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Decision analysis: how to describe medical decisions using probability</a></li>
        <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
-        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li>  
+        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li> 
+          <li><a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">The kindness of decision analysis</a></li> 
+          
   <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
 </ul>
       </ul>
