--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@
         </ul>
         <li>Blog posts</li>
         <ul>
-       <li><a href="https://wordpress.com/post/samweisenthal.com/120">Decision analysis: how to describe medical decisions using probability</a></li>
+       <li><a href="https://wordpress.com/post/samweisenthal.com/120">How to use probability to describe medical decisions</a></li>
        <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
         <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li> 
           <li><a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">The kindness of decision analysis</a></li> 
