--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,7 +88,7 @@
 </p>
 
     <ul>
-       <li><a href="https://samweisenthal.com/2024/11/10/welcome/">An open letter to those who might be suffering in the Middle East</a></li>
+       <li><a href="https://samweisenthal.com/2024/11/10/welcome/">Re conflict in the Middle East</a></li>
 <!--
       <li><a href="https://openprocessing.org/sketch/1939242">Creative coding</a></li>
       -->
