--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
       <ul>
         <li>Manuscripts</li>
         <ul>
-  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a></li>
+  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a>,<a href="https://youtu.be/572X1PhHJUs">video</a></li>
     <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
         </ul>
         <li>Blog posts</li>
@@ -77,11 +77,14 @@
           <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
     </ul>
     
-   <p>On statistics and data science</p>
+   <p>On statistics, data science, machine learning, and society</p>
     <ul>
 
          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center (blog)</a></li>  
-   <!--<li><a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">Statistics and machine learning ()</a></li>-->
+   <li><a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">Statistics and machine learning (forum)</a></li>
+      <li><a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">Kaggle and chance(forum)</a></li>
+      <li><a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">The addictiveness of recommender systems</a></li>
+  
          </ul>    
     
 <p>Personal
