--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,7 +65,7 @@
   <li> <a href="https://arxiv.org/pdf/2311.12188.pdf">ChatGPT and post-test probability (preprint)</a></li>
       <!---   <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>, <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
       --->
-   <li><a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">On the post-test probability of covid-19 (app)</a></li>
+   <li><a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">On the post-test probability of covid-19 (app)</a>, <a href="https://discourse.datamethods.org/t/determining-post-test-probability-of-covid-19/4723/38">forum discussion</a></li>
       
 </ul>
     
@@ -74,7 +74,7 @@
             <p>Teaching</p>
     <ul>
           <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On prediction (forum)</a></li>
-          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculator lecture</a></li>
+          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculators (lecture)</a></li>
     </ul>
     
    <p>On statistics, data science, machine learning, and society</p>
@@ -82,8 +82,8 @@
 
          <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center (blog)</a></li>  
    <li><a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">Statistics and machine learning (forum)</a></li>
-      <li><a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">Kaggle and chance(forum)</a></li>
-      <li><a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">The addictiveness of recommender systems</a></li>
+      <li><a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">Kaggle and chance (forum)</a></li>
+      <li><a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">The addictiveness of recommender systems (blog)</a></li>
   
          </ul>    
     
