--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,11 @@
 <!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
+<!--[if gt IE 8]><!--> 
+<html class="no-js" lang="en"><!--<![endif]-->
 
 <head>
-{% include _head.html %}
+  {% include _head.html %}
 </head>
 
 <body class="home">
@@ -24,84 +25,111 @@
           <iframe src="https://openprocessing.org/sketch/2054910/embed/?plusEmbedHash=b9e5cd59&userID=318845&plusEmbedTitle=false#sketch" style="width:80%; height:50px;"></iframe>
         </center>
     -->
-      <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below.</p>
+    <p>Hi, I'm Sam! Welcome to my page.  I study the intersection of statistics and medicine.  Some work is described below.</p>
 
     <p>Medical decision making / decision theory / reinforcement learning</p> 
+    <ul>
+      <li>Manuscripts</li>
       <ul>
-        <li>Manuscripts</li>
-        <ul>
-  <li><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">Relative sparsity for medical decision problems</a>, <a href="https://youtu.be/572X1PhHJUs">video</a></li>
-    <li><a href="https://arxiv.org/pdf/2306.14297.pdf">Inference for relative sparsity</a></li>
-        </ul>
-        <li>Blog posts</li>
-        <ul>
-       <li><a href="https://wordpress.com/post/samweisenthal.com/120">How to use probability to describe medical decisions</a></li>
-       <li><a href="https://samweisenthal.com/2024/08/17/99/">The roles assigned by decision analysis</a></li>  
-        <li><a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">Decision analysis and the real world</a></li> 
-          <li><a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">The kindness of decision analysis</a></li> 
-          
-  <!--   <li><a href="https://samweisenthal.com/2024/08/17/99/">The protective role of decision analysis</a></li>  -->
-</ul>
+        <li>Relative sparsity for medical decision problems 
+          <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/sim.9755">(manuscript)</a>, 
+          <a href="https://youtu.be/572X1PhHJUs">(video)</a>
+        </li>
+        <li>Inference for relative sparsity 
+          <a href="https://arxiv.org/pdf/2306.14297.pdf">(manuscript)</a>
+        </li>
       </ul>
+      <li>Blog posts</li>
+      <ul>
+        <li>How to use probability to describe medical decisions 
+          <a href="https://wordpress.com/post/samweisenthal.com/120">(blog post)</a>
+        </li>
+        <li>The roles assigned by decision analysis 
+          <a href="https://samweisenthal.com/2024/08/17/99/">(blog post)</a>
+        </li>  
+        <li>Decision analysis and the real world 
+          <a href="https://samweisenthal.com/2024/12/08/decision-analysis-and-the-real-world/">(blog post)</a>
+        </li> 
+        <li>The kindness of decision analysis 
+          <a href="https://samweisenthal.com/2024/12/14/the-kindness-of-decision-analysis/">(blog post)</a>
+        </li>
+      </ul>
+    </ul>
 
     <p>Environmental health / inverse reinforcement learning</p>
-      <ul>
-  <li><a href="https://arxiv.org/pdf/2404.04406.pdf">Optimality-based reward learning with applications to toxicology (preprint)</a></li>
-      </ul>
-    
+    <ul>
+      <li>Optimality-based reward learning with applications to toxicology 
+        <a href="https://arxiv.org/pdf/2404.04406.pdf">(preprint)</a>
+      </li>
+    </ul>
+
     <p>Prediction</p>
     <ul>
-       <li><a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">Predicting AKI with EHR data (paper)</a></li>
- <li><a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">On calibration (forum)</a></li>
+      <li>Predicting AKI with EHR data 
+        <a href="https://pubmed.ncbi.nlm.nih.gov/30458044/">(paper)</a>
+      </li>
+      <li>On calibration 
+        <a href="https://stats.stackexchange.com/questions/263393/scikit-correct-way-to-calibrate-classifiers-with-calibratedclassifiercv/288470#288470">(forum)</a>
+      </li>
     </ul>
 
     <p>Radiation dose monitoring / quality control / outlier detection</p>
-<ul>
-  <li><a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">Radiation Exposure Extraction Engine (paper)</a></li>
-</ul>
-
-<p>Diagnosis / Covid-19 / large language models </p>
-<ul>
-  <li> <a href="https://arxiv.org/pdf/2311.12188.pdf">ChatGPT and post-test probability (preprint)</a></li>
-      <!---   <li>On the post-test probability of covid-19 (<a href="https://github.com/samuelweisenthal/BinaxNOWpostTestProb/blob/main/covid.post.test.pdf">blog post</a>, <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">app</a>)</li>
-      --->
-   <li><a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">On the post-test probability of covid-19 (app)</a>, <a href="https://discourse.datamethods.org/t/determining-post-test-probability-of-covid-19/4723/38">forum discussion</a></li>
-      
-</ul>
-    
-    <p>A full list of my publications can be found <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.</p>
-
-            <p>Teaching</p>
     <ul>
-          <li><a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">On prediction (forum)</a></li>
-          <li><a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">Risk calculators (lecture)</a></li>
-    </ul>
-    
-   <p>On statistics, data science, machine learning, and society</p>
-    <ul>
-
-         <li><a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">Data science to statistics in an academic medical center (blog)</a></li>  
-   <li><a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">Statistics and machine learning (forum)</a></li>
-      <li><a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">Kaggle and chance (forum)</a></li>
-      <li><a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">The addictiveness of recommender systems (blog)</a></li>
-  
-         </ul>    
-    
-<p>Personal
-</p>
-
-    <ul>
-       <li><a href="https://samweisenthal.com/2024/11/10/welcome/">Re conflict in the Middle East</a></li>
-<!--
-      <li><a href="https://openprocessing.org/sketch/1939242">Creative coding</a></li>
-      -->
+      <li>Radiation Exposure Extraction Engine 
+        <a href="https://pubmed.ncbi.nlm.nih.gov/26644157/">(paper)</a>
+      </li>
     </ul>
 
+    <p>Diagnosis / Covid-19 / large language models </p>
+    <ul>
+      <li>ChatGPT and post-test probability 
+        <a href="https://arxiv.org/pdf/2311.12188.pdf">(preprint)</a>
+      </li>
+      <li>On the post-test probability of covid-19 
+        <a href="https://samuelweisenthal.shinyapps.io/posttestprobabilitycovid/">(app)</a>,
+        <a href="https://discourse.datamethods.org/t/determining-post-test-probability-of-covid-19/4723/38">(forum discussion)</a>
+      </li>
+    </ul>
+
+    <p>A full list of my publications can be found 
+      <a href="https://scholar.google.com/citations?hl=en&user=bbcNyWwAAAAJ&view_op=list_works&sortby=pubdate">here</a>.
+    </p>
+
+    <p>Teaching</p>
+    <ul>
+      <li>On prediction 
+        <a href="https://discourse.datamethods.org/t/what-should-mds-in-training-know-about-medical-prediction/335">(forum)</a>
+      </li>
+      <li>Risk calculators 
+        <a href="https://docs.google.com/presentation/d/1xbUmjJ5iFcl16fFCQeqJVOVObIK8NKm0FgxPjGTnnQ8/edit#slide=id.p">(lecture)</a>
+      </li>
+    </ul>
+
+    <p>On statistics, data science, machine learning, and society</p>
+    <ul>
+      <li>Data science to statistics in an academic medical center 
+        <a href="https://samweisenthal.com/2024/06/09/lessons-learned-during-a-journey-from-data-science-to-statistics-during-my-medical-training/">(blog)</a>
+      </li>  
+      <li>Statistics and machine learning 
+        <a href="https://stats.stackexchange.com/questions/336442/predictive-models-statistics-cant-possibly-beat-machine-learning/336445#336445">(forum)</a>
+      </li>
+      <li>Kaggle and chance 
+        <a href="https://stats.stackexchange.com/questions/292415/are-kaggle-competitions-just-won-by-chance">(forum)</a>
+      </li>
+      <li>The addictiveness of recommender systems 
+        <a href="https://samweisenthal.com/2024/12/15/addictive-substances-and-recommender-systems/">(blog)</a>
+      </li>
+    </ul>    
+
+    <p>Personal</p>
+    <ul>
+      <li>Re conflict in the Middle East 
+        <a href="https://samweisenthal.com/2024/11/10/welcome/">(blog)</a>
+      </li>
+    </ul>
     
   </article>
 </div><!-- /#main -->
-
-  
 
 {% include _scripts.html %}
 
